# systeminfo

./: Cargo.toml  readme.md
src/: basic.glade  lib.rs  main.glade  main.glade~  main.rs
